# Robotics-Arm-CLI

./: .gitignore  AGENTS.md  README.md  SKILL.md  main.py  pyproject.toml
script/: pickAndPlace.sh
skills/robotics-arm-control/: SKILL.md
src/robotics_arm_cli/: __init__.py  app.py
src/robotics_arm_cli/example/: Checkerboard_Test.py  Checkerboard_Test_Twin.py  robot_action_node.py
src/robotics_arm_cli/robot_arm/: position.py  robot_arm.py  tcp.py
